# hermes-threshold

./: .gitignore  FINAL_TEST.md  README.md  WEBHOOK_TEST.md  WEBHOOK_TEST_V2.md  plan-details.md  pyproject.toml
dashboard-plugin/hermes-threshold/dashboard/: manifest.json  plugin_api.py
docs/: dashboard-plugin.md  hermes-integration.md  trial-readout.md
src/hermes_threshold/: __init__.py  app.py  auth.py  cli.py  config.py  engine.py  honcho_client.py  models.py  store.py
tests/: test_api.py  test_cli.py  test_dashboard_plugin.py  test_engine.py
