[project]
name = "hermes-threshold"
version = "0.1.0"
description = "MVP autonomy threshold service for Hermes proactive wake decisions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11,<4",
    "fastapi>=0.115,<1",
    "honcho-ai>=2.1,<3",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
hermes-threshold = "hermes_threshold.app:main"
hermes-threshold-review = "hermes_threshold.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_threshold"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
